fix: make EndGameModal cover entire page even if scrollbar present

--- a/src/styles/GameEndModal.css
+++ b/src/styles/GameEndModal.css
@@ -3,7 +3,7 @@
 }
 
 .modal-wrapper {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 
@@ -11,8 +11,8 @@
     align-items: center;
     justify-content: center;
 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     background-color: #00000095;
 }
